# mcudubby

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  README_CN.md  README_zh.md  RELEASE_NOTES.md  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  ai-examples.md  ai-playbook.md  ai-tool-surface-evaluation.md  architecture.md  board-validation-guide.md  codex-runbook.md  generic-board-workflow.md  mcp-usage-example.md  mcubug-skill.md  peripheral-actuator-debug-playbook.md  quickstart.md  support-matrix.md  tool-reference.md  v0.6-roadmap.md  windows-mcp-config-example.md
docs/archive/: v0.5.2-roadmap.md
docs/plans/: 2026-07-20-gpt-5p6-tool-surface-refactor.md  2026-07-21-ai-native-evidence-runtime-refactor.md
docs/releases/: v0.5.2.md
rust/probe-sidecar/: Cargo.toml  README.md
rust/probe-sidecar/src/: lib.rs  main.rs
rust/probe-sidecar/tests/: protocol.rs
scripts/: jlink_rtt_smoke.py  jlink_swo_smoke.py  validate_docs.py
skills/mcubug/: SKILL.md
skills/mcubug/agents/: openai.yaml
skills/mcubug/references/: ai-examples.md  ai-playbook.md  board-validation-guide.md  generic-board-workflow.md  peripheral-actuator-debug-playbook.md  quickstart.md  support-matrix.md  tool-reference.md  windows-mcp-config-example.md
skills/mcubug/scripts/: install_skill.py  sync_references.py  validate_skill.py
src/McuBuddy/: __init__.py  build_runtime.py  chip_matcher.py  cli.py  config.py  device_patch_manager.py  doctor.py  elf_manager.py  errors.py  gdb_server.py  mcp_execution.py  pack_manager.py  security_guards.py  server.py  session.py  skill_installer.py  tool_profiles.py  tool_safety.py  validation_records.py
src/McuBuddy/demo/: demo_cli.py  mock_backends.py  mock_logs.py
src/McuBuddy/mcp_tools/: __init__.py  build_debug.py  diagnostics.py  evidence.py  io.py  runtime.py  svd.py
src/McuBuddy/models/: common.py
src/McuBuddy/tools/: build.py  configuration.py  diagnose.py  diagnose_startup.py  evidence.py  gdb_server.py  logs.py  phase3.py  phase3_common.py  smoke.py
src/McuBuddy/validation/: stm32f103c8-jlink.json
src/mcudubby/: __init__.py  build_runtime.py  chip_matcher.py  config.py  device_patch_manager.py  errors.py  gdb_server.py  mcp_execution.py  result.py  server.py  session.py  svd_manager.py  tool_safety.py  validation_records.py
src/mcudubby/demo/: __init__.py  demo_cli.py  mock_backends.py  mock_elf.py  mock_session.py
src/mcudubby/mcp_tools/: __init__.py  build_debug.py  io.py  runtime.py
src/mcudubby/models/: diagnostics.py
src/mcudubby/tools/: build.py  configuration.py  debug_loop.py  diagnose_faults.py  diagnose_hardfault.py  diagnose_router.py  diagnostic_context.py  gdb_server.py  lifecycle.py  logs.py  phase3_clock.py  phase3_interrupt.py  phase3_peripheral.py  phase3_stack.py  project.py  (+2 more)
tests/: __init__.py
tests/evaluation/: gpt5p6_scenarios.yaml
tests/integration/: test_build_tools.py  test_configuration_profiles.py  test_debug_loop.py  test_demo_diagnosis.py  test_diagnose_router.py  test_evidence_workflows.py  test_project_tools.py  test_tool_profiles.py
tests/unit/: test_breakpoint_tools.py  test_chip_matcher.py  test_cli.py  test_conditional_breakpoints.py  test_doctor_contract.py  test_documentation_contracts.py  test_evidence_tools.py  test_fault_classification.py  test_flash_tools.py  test_gdb_server_tools.py  test_jlink_backend.py  test_jlink_rtt_tools.py  test_jlink_trace_tools.py  test_lifecycle_tools.py  test_mcp_concurrency.py  test_memory_map_tools.py  test_pack_manager.py  test_package_version.py  test_phase3.py  test_probe_capabilities.py  test_probe_rs_sidecar.py  test_probe_source_tools.py  test_pyocd_connect_fallback.py  test_python_compatibility.py  test_registry_metadata.py  test_result_envelope.py  test_rtos_context_safety.py  test_security_guards.py  test_skill_installer.py  test_skill_reference_sync.py  test_skill_validation.py  test_smoke_tools.py  test_stack_overflow.py  test_svd_tools.py  test_tool_profile_docs.py  test_tool_profiles.py  test_tool_safety.py  test_uart_send.py  test_validation_records.py  test_watchpoint_and_fpu_tools.py
(+53 files in other folders)
