[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "McuBubby"
version = "0.5.0"
description = "AI-native debugging and observability for embedded boards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [

]
keywords = [
    "embedded",
    "mcu",
    "debugging",
    "ai-debugging",
    "ai-assisted-debugging",
    "firmware",
    "mcp",
    "codex",
    "claude-code",
    "pyocd",
    "jlink",
    "st-link",
    "cmsis-dap",
    "hardfault",
    "freertos",
    "swd",
    "svd",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "mcp>=1.26.0",
    "pydantic>=2.12.0",
    "pyelftools>=0.32",
    "pyocd>=0.36.0",
    "pyserial>=3.5",
    "cmsis-svd>=0.4",
]

[project.urls]
Homepage = "https://github.com/cunjun/McuBubby"
Documentation = "https://github.com/cunjun/McuBubby#readme"
Repository = "https://github.com/cunjun/McuBubby"
Issues = "https://github.com/cunjun/McuBubby/issues"

[project.optional-dependencies]
jlink = [
    "pylink-square>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
McuBubby = "McuBubby.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/McuBubby"]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]

[tool.ruff]
line-length = 100
target-version = "py310"
