[package]
name = "McuBuddy-probe-sidecar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
base64 = "0.22"
probe-rs = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[lib]
name = "mcu_buddy_probe_sidecar"
path = "src/lib.rs"

[[bin]]
name = "McuBuddy-probe-sidecar"
path = "src/main.rs"
